<resources>
    <string name="app_name">StydyInBook</string>
    <!--CommonFrameFragment-->
    <string name="common_frame_titlebar_name">Android知识库</string>
    <string name="launcer_txt_description">Android世界......</string>
    <!--NativeJsonParseActivity-->
    <string name="json_titlebar_name">手动Json解析</string>
    <string name="json_btn_javaobject">将Json对象转换为Java对象</string>
    <string name="json_btn_javalist">将Json数组转换为Java集合</string>
    <string name="json_btn_complex">复杂Json数据解析</string>
    <string name="json_btn_special">特殊Json数据解析</string>
    <string name="json_txt_original">原始数据：</string>
    <string name="json_txt_last">转换后的数据：</string>
    <!--GsonParseActivity-->
    <string name="gson_txt_title_name">Gson解析</string>
    <string name="gson_btn_java_to_jsonobject">将java对象转换为json对象</string>
    <string name="gson_btn_java_to_jsonarray">将java集合转换为json数组</string>
    <!--FastJsonParseActivity-->
    <string name="fastjson_txt_title_name">FastJson解析</string>
    <string name="fastjson_btn_jsontojava">将json对象转换为java对象</string>
    <string name="fastjson_btn_jsonarraytojavalist">将json数组转换为json集合</string>
    <string name="fastjson_btn_javatojson">将java对象转换为json对象</string>
    <string name="fastjson_btn_javalisttojsonarray">将java集合转换为json数组</string>
    <!--XUtils3Activity-->
    <string name="xutils3_txt_title_name">XUtils3</string>
    <string name="xutils3_btn_annotation_module">xUtils3注解模块</string>
    <string name="xutils3_btn_net">xUtils3联网模块</string>
    <string name="xutils3_btn_image">xUtils3加载单张图片</string>
    <string name="xutils3_btn_image_list">xUtils3加载列表图片</string>
    <!--FragmentXutils3Activity-->
    <string name="xutils3fragment_txt_title_name">在Fragment中使用注解</string>
    <string name="xutils3_btn_fragment">Fragment的按钮</string>
    <string name="xutils3_click_is_worked">点击已生效</string>
    <string name="xutils3_text_is_already_init">已初始化</string>
    <string name="net_btn_request">Get和Post请求</string>
    <string name="net_btn_download">大文件下载</string>
    <string name="net_btn_upload">大文件上传</string>
    <string name="net_txt_display">显示结果：</string>
    <!--XUtilsNetActivity-->
    <string name="xutils3_net_title_name">xUtils网络模块</string>
    <!--GlideActivity-->
    <string name="glide_txt_title_name">Glide</string>
    <string name="glide_btn_base_use">基本使用方法</string>
    <string name="glide_btn_recyclerview">ListView中加载网络图片</string>
    <string name="glide_btn_tranfromtations">图片变换</string>
    <!--ButterknifeActivity-->
    <string name="butterknife_txt_title">Butterknife</string>
    <string name="butterknife_text_default">这边是文本展示区域</string>
    <string name="butterknife_text_set">这个是Butterknife的使用讲解页面</string>
    <string name="butterknife_cb_name">Checkbox</string>
    <string name="butterknife_button">这是一个按钮</string>
    <!--GlideActivity-->
    <string name="glide_txt_title">Glide</string>
    <!--GlideBaseActivity-->
    <string name="glide_txt_base_title">Glide基本使用</string>
    <!--GlideRecyclerviewActivity-->
    <string name="glide_txt_recyclerview_title">Glide</string>
    <!--GlideTransformationActivity-->
    <string name="glide_txt_transformation_title">Glide</string>
    <!--EventBus-->
    <string name="eventbus_txt_title">EventBus</string>
    <string name="eventbus_btn_send">跳转到发送页面</string>
    <string name="eventbus_btn_sticky_send">发送粘性事件跳转到发送页面</string>
    <string name="eventbus_txt_result">接收显示的结果：</string>
    <string name="eventbus_send_txt_title">EventBus发送数据页面</string>
    <string name="eventbus_btn_send_main">主线程发送数据</string>
    <string name="eventbus_txt_receive_main">这是主线程发送过来的数据</string>
    <string name="eventbus_btn_send_sticky">接收粘性数据</string>
    <string name="eventbus_txt_send_result">显示结果：</string>
    <string name="eventbus_txt_receive_sticky">这是一条粘性事件消息</string>
</resources>
