<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".xuitls3.XUitls3Acticity">

    <include layout="@layout/titlebar" />

    <Button
        android:id="@+id/btn_annotation_module"
        style="@style/button_style"
        android:text="@string/xutils3_btn_annotation_module" />

    <Button
        android:id="@+id/btn_net"
        style="@style/button_style"
        android:text="@string/xutils3_btn_net" />

    <Button
        android:id="@+id/btn_image"
        style="@style/button_style"
        android:text="@string/xutils3_btn_image" />

    <Button
        android:id="@+id/btn_image_list"
        style="@style/button_style"
        android:text="@string/xutils3_btn_image_list" />

</LinearLayout>
