<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".xuitls3.net.XUtils3NetActivity">

    <include layout="@layout/titlebar" />

    <Button
        android:id="@+id/btn_request"
        style="@style/button_style"
        android:text="@string/net_btn_request" />

    <Button
        android:id="@+id/btn_file_download"
        style="@style/button_style"
        android:text="@string/net_btn_download" />

    <Button
        android:id="@+id/btn_file_upload"
        style="@style/button_style"
        android:text="@string/net_btn_upload" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/net_txt_display"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
