<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".butterknife.ButterKnifeActivity">

    <include layout="@layout/titlebar" />

    <TextView
        android:id="@+id/txt_butterkninfe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/butterknife_text_default"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cb_butterkninfe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/butterknife_cb_name"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_butterkninfe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/butterknife_button"
        android:textSize="20sp" />

</LinearLayout>
