<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".json.activity.NativeJsonParseActivity">

    <include layout="@layout/titlebar" />

    <Button
        android:id="@+id/btn_json_to_java"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/fastjson_btn_jsontojava"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_jsonarray_to_javalist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/fastjson_btn_jsonarraytojavalist"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_fastjson_java_to_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/fastjson_btn_javatojson"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_fastjson_javalist_to_jsonarray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/fastjson_btn_javalisttojsonarray"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/json_txt_original"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_original"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/json_txt_last"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
